[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/nodes/Popup.gd" type="Script" id=2]

[node name="PopupAlreadyExists" type="PopupDialog"]
margin_right = 824.0
margin_bottom = 400.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/separation = 55
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 824.0
margin_bottom = 207.0
text = "Are you sure?

You already have  a factory with that name"
align = 1
autowrap = true

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 824.0
margin_bottom = 300.0
custom_constants/separation = 100
alignment = 1

[node name="ButtonConfirm" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 253.0
margin_right = 379.0
margin_bottom = 38.0
text = "Continue"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 479.0
margin_right = 571.0
margin_bottom = 38.0
text = "Cancel"

[connection signal="about_to_show" from="." to="." method="_on_about_to_show"]
[connection signal="pressed" from="VBoxContainer/Buttons/ButtonConfirm" to="." method="_on_ButtonConfirm_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
